--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background: url(https://ih1.redbubble.net/image.668989727.8282/flat,550x550,075,f.u2.jpg) bottom center;
   background-size: cover;
 }
 
